Overflow fixed

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 body {
   font-family: "Quicksand", sans-serif;
   background-color: black;
-  overflow: hidden;
 }
 h1,
 h2 {
